[project]
name = "mshroom"
version = "0.1.0"
description = "MSHroom: a free, open-source HL7 v2 test utility -- viewer, MLLP sender, and listener."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hl7kit", "app"]
include-package-data = true

[tool.setuptools.package-data]
hl7kit = ["data/*.json"]
app = ["static/*.html", "static/*.js", "static/*.css"]
